--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="selected_icon_color">#C4FFC2</color>
     <color name="unselected_icon_color">#3E454D</color>
     <color name="plate">#D9D9D9</color>
+    <color name="transparent">#00000000</color>
+    <color name="red">#FF0000</color>
 </resources>
