--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalendarFragment"
     android:background="@drawable/app_background">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/settingsTitle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="calendar" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40sp"
+        android:padding="16dp"
+        android:text="Calendar"
+        android:textColor="#C4FFC2"
+        android:textSize="24sp" />
 
-</FrameLayout>
+</RelativeLayout>
