--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/app_background">
 
     <TextView
-        android:id="@+id/settingsTitle"
+        android:id="@+id/Calendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
@@ -14,5 +14,66 @@
         android:text="Calendar"
         android:textColor="#C4FFC2"
         android:textSize="24sp" />
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Calendar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="31dp"
+        android:background="@color/plate" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="531dp"
+        app:cardBackgroundColor="@color/plate"
+        android:layout_below="@+id/calendarView"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="ADD A NOTE"
+            android:textColor="@color/menu_green" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80sp"
+            android:layout_marginRight="16sp"
+            android:orientation="horizontal">
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_appbar_background"
+                android:backgroundTint="@color/plate"
+                android:hint="Need water for my plants!"
+                android:inputType="text"
+                android:padding="12sp"
+                android:singleLine="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="50sp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="8sp"
+                android:background="@drawable/rounded_appbar_background"
+                android:padding="12sp"
+                android:text="Enter" />
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
